--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Book Recommendation | Open Library Clone</title>
+  <title>Open Library | Book Recommendations</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -13,7 +13,7 @@
     <nav>
       <a href="#">My Books</a>
       <a href="#">Browse</a>
-      <input type="text" placeholder="Search..." id="search-box">
+      <input type="text" id="search-box" placeholder="Search books..." />
       <button class="btn">Log In</button>
       <button class="btn primary">Sign Up</button>
     </nav>
@@ -24,16 +24,16 @@
     <h2>Welcome to Open Library</h2>
     <div class="features">
       <div class="feature">
-        <h3>📖 Read Free Library Books</h3>
-        <p>Millions of books available through digital lending</p>
+        <h3>📖 Read Free Books</h3>
+        <p>Millions of books available through digital lending.</p>
       </div>
       <div class="feature">
         <h3>📅 Set a Reading Goal</h3>
-        <p>Track your reading progress every year</p>
+        <p>Track your reading progress every year.</p>
       </div>
       <div class="feature">
-        <h3>📔 Keep Track of Books</h3>
-        <p>Organize and manage your favorite titles</p>
+        <h3>📔 Organize Your Books</h3>
+        <p>Manage your favorite titles and lists easily.</p>
       </div>
     </div>
   </section>
@@ -42,7 +42,7 @@
   <section class="book-section">
     <h2>Trending Books</h2>
     <div class="book-list" id="trending-books">
-      <!-- Book Cards will be inserted by JS -->
+      <p>Loading trending books...</p>
     </div>
   </section>
 
@@ -50,7 +50,7 @@
   <section class="book-section">
     <h2>Classic Books</h2>
     <div class="book-list" id="classic-books">
-      <!-- Book Cards will be inserted by JS -->
+      <p>Loading classic books...</p>
     </div>
   </section>
 
